Database querys will return non-null