@@ -6,9 +6,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.rmi.server.ObjID;
+import java.util.*;
 
 @Service
 public class CluesService {
@@ -24,16 +23,19 @@ public class CluesService {
     }
 
     public List<String> findByIdEmojisOnly(String id) {
-        return repository.findByIdEmojisOnly(id).map(CluesEmoji::getEmojis).orElse(Collections.emptyList());
+        List<String> emptyValues  = new ArrayList<String>(List.of("-", "-", "-", "-"));
+        return repository.findByIdEmojisOnly(id).map(CluesEmoji::getEmojis).orElse(emptyValues);
     }
 
     public List<String> findByIdQuoteOnly(String id) {
-        return repository.findByIdQuoteOnly(id).map(CluesQuote::getQuote).orElse(Collections.emptyList());
+        List<String> emptyValues  = new ArrayList<String>(List.of("-"));
+        return repository.findByIdQuoteOnly(id).map(CluesQuote::getQuote).orElse(emptyValues);
     }
 
     public Clues getNth(int n) {
+        Clues emptyClue = new Clues(new ObjID().toString(), new ArrayList<String>(List.of("-", "-", "-", "-")), new ArrayList<String>(List.of("-")));
         Pageable pageable = PageRequest.of(n - 1, 1, Sort.by(Sort.Direction.ASC, "id"));
         Page<Clues> page = repository.findAll(pageable);
-        return page.hasContent() ? page.getContent().get(0) : null;
+        return page.hasContent() ? page.getContent().get(0) : emptyClue;
     }
 }
